@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: buildtool,v 1.211 2007/03/08 23:25:43 mej Exp $
+# $Id: buildtool,v 1.212 2007/03/11 19:05:51 mej Exp $
 #
 
 use strict;
@@ -416,6 +416,11 @@ build_single_package
                 my @output;
 
                 nprint "Resetting chroot jail, please wait.\n";
+                if (&pkgvar_get("lamebrain") =~ /\bNEEDPROC\b/) {
+                    dprint "NEEDPROC LAMEBRAIN workaround active:  excluding /proc from instroot-reset.\n";
+                    if ($pkgs->{$pkg}{"INSTROOT_RESET"} !~ /\b--exclude=\/proc\b/) {
+                        $pkgs->{$pkg}{"INSTROOT_RESET"} .= " --exclude=/proc";
+                    }
                 @output = &run_cmd($pkgs->{$pkg}{"INSTROOT_RESET"}, $pkgs->{$pkg}{"INSTROOT"}, "instroot-reset:  ");
                 if ($output[0] != MEZZANINE_SUCCESS) {
                     wprint "Reset of install root failed.\n";
@@ -1086,7 +1091,7 @@ main
 
     if ($OPTION{"version"}) {
         &print_version($PROGNAME, $VERSION, "Michael Jennings <mej\@eterm.org>",
-                       'CVS Revision $Revision: 1.211 $ created on $Date: 2007/03/08 23:25:43 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.212 $ created on $Date: 2007/03/11 19:05:51 $ by $Author: mej $ ');
     }
     if ($OPTION{"help"}) {
 	&print_usage_info();
